--- a/resume_html.html
+++ b/resume_html.html
@@ -2,6 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Resume - Rohitha Jami</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      color: #333;
+    }
+    h1 {
+      color: #222;
+    }
+  </style>
+  
+</head>
+
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume - Rohitha Jami</title>
   <style>
@@ -170,3 +185,4 @@
   </div>
 </body>
 </html>
+
